# gelfload

./: AUTHORS  COPYING  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
gelfshims/common/: .cshstdio.c.swp  Makefile.common  Makefile.elf  Makefile.macho  cdirect.c  cscandir.c  cshdirent.c  cshopen.c  cshreaddir.c  cshstat.c  cshstdio.c  shdirent.h  shim.h  shreaddir.h  shstat.h  shstdio.h
gelfshims/core/: Makefile.am  configure.ac  core.c
gelfshims/linux-gnu-libc5/: Makefile  ctype.c  errno.c  generic.c  mknod.c  stat.c
gelfshims/linux-gnu-libc6/: Makefile  Makefile.native  ctype.c  environ.c  epoll.c  errno.c  error.c  generic.c  gettext.c  gmon.c  gnu.c  libgelfload-native-gelfshims-linux-gnu-libc6.so.0  open.c  progname.c  readdir64.c  rt.c  start.c  stat64.c  stdio.c  utime.c
gelfshims/solaris/: Makefile  generic.c  intl.c  redirect.h  stat64.c  stdio.c
generishims/: generishims.c
generishims-old/: Makefile  generishims.c
scripts/: 0x18000000.solaris.map  ac_compile_check_sizeof.ac  lean.m4  missing
src/: Makefile.am  Makefile.in  bbuffer.c  bbuffer.h  dlfcn.c  elfload-ld.c  elfload.c  elfload.h  elfload_dlfcn.h  elfload_exec.h  elfload_microcosm.h  elfnative.h  findlibrary.c  findlibrary.h  main.c  microcosm.c  whereami.c  whereami.h
test/common/: Makefile  libc_wrap.c  testdl.c
test/i686-pc-linux-gnu/: testdl  testdl.c  testhost  testso.s  teststatic
test/x86_64-pc-linux-gnu/: libc_wrap.c  testdl  testhost  testhost.s  teststatic  teststatic.s
